# MWP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
MWP/: CMakeLists.txt
MWP/include/: LinSys.hpp  Matrix.hpp  Vector.hpp
MWP/src/: LinSys.cpp  Matrix.cpp  Vector.cpp
MWP/tests/: CMakeLists.txt  LinSys.test.cpp  Matrix.test.cpp  Vector.test.cpp
